--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,150 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+/*Carrusel*/
+
+.carrusel{/*Tamanos de la imagenes del carrucel */
+  width: 90%;
+  margin: auto;
+  height: 565px;
+  overflow: hidden;
+
+}
+.carrusel ul{
+    padding: 0;
+    display: flex;
+    width: 400%;
+
+    animation: slider 20s infinite alternate;
+    animation-timing-function: linear;
+}
+.carrusel li{
+    width: 100%;
+    list-style: none;
+}
+.carrusel li img{
+    width: 100%;
+}
+
+@keyframes slider{
+    0%{margin-left: 0;}
+    20%{margin-left: 0;}
+    
+    25%{margin-left: -100%;}
+    45%{margin-left: -100%;}
+    
+    50%{margin-left: -200%;}
+    70%{margin-left: -200%;}
+    
+    75%{margin-left: -300%;}
+    100%{margin-left: -300%;}
+}
+
+/**Titulo y subtitulo */
+
+.main {
+    width: 100%;
+}
+
+.main__info {
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.main__info__title {
+    color: #1b2740;
+    font-size: 22px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+
+.main__info__subtitle {
+    color: rgba(0, 0, 0, .77);
+    font-size: 17px;
+    margin-bottom: 10px;
+    font-weight: 500;
+}
+
+/**Tarjetas de inicio */
+.grilla {
+    box-sizing: border-box;
+    display: grid;
+    grid-gap: 2rem;/*El espacio de la tarjeta dentro del ancho */
+    grid-template-columns: repeat(12, 1fr);
+    padding: 2rem;
+    margin: 0 auto;
+    max-width: 60rem;/*Ancho de las tarjetas */
+    width: 100%;
+  }
+  .contenedor{
+    padding: 2rem 0;
+    text-align: center;
+  }
+  
+  .tarjeta {
+    border-radius: 2rem;
+    box-shadow: rgba(11, 11, 11, 0.08) 0 0 2rem;
+    border-style: black;
+    grid-column-end: span 4;
+    padding: 0,9rem;
+  }
+  
+  .tarjeta .img-card {
+    max-width: 10rem;/**Tamano maximo de la imagen */
+    width: 100%;
+  }
+  h1{
+    text-align: center;
+  }
+  h3 {
+    font-size: 2rem;
+    font-weight: 500;
+  }
+  
+  h4 {
+    font-size: 1rem;
+    font-weight: 700;
+  }
+  
+  p {
+    font-size: 1rem;
+    line-height: 130%;/**espacio entre las lienas del parrafo */
+    text-align: justify;
+  }
+  
+  
+  .a-card{
+    background-color: black;
+    border: 4px solid black;
+    border-radius: 1,8rem;
+    display: block;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 1rem 1rem;
+    margin: 2rem auto;/*La posicion de la altura del boton  */
+    text-decoration: none;
+    width: 8rem;/**ancho del boton */
+    color:white;
+  }
+  
+  .a-card:hover {
+    background-color: white;
+    color: black;
+  }
+/*el grid para ajuste del pantallas */
+  @media (max-width: 35rem) {
+  
+    .grilla {
+      grid-gap: 1,8rem 0;
+    }
+  
+    .grilla > * {
+      grid-column-end: span 12;
+    }
+  
+  }
+  
